--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,3 +1,63 @@
-h1{
-    color: red;
+.inner {
+    width: 100%;
+}
+header {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    height: 50px;
+    -webkit-transition-duration: 0.4s;
+    -webkit-transition-timing-function: ease;
+    transition-duration: 0.4s;
+    transition-timing-function: ease;
+    background: none;
+}
+.top{
+    font-size: 30px;
+}
+.title{
+    text-align: center;
+    position: absolute;
+    top: 200px;
+    left: 500px;
+}
+.debon{
+    font-size: 150px;
+    margin-top: -30px;
+}
+header .logo_top {
+    font-size: 40px;
+    line-height: 1em;
+    font-weight: bold;
+}
+header:after {
+    display: block;
+    width: 100%;
+    content: "";
+}
+.img_wrap {
+    width: 100%;
+}
+.img_wrap img {
+    display: block;
+    width: 100%;
+    margin: 0;
+}
+section article {
+    margin: 30px 0;
+    font-size: 15px;
+    line-height:1.7em;
+}
+.down {
+    background-color: rgba(0,0,0,.8);
+    -webkit-transition-duration: 0.4s;
+    -webkit-transition-timing-function: ease;
+    transition-duration: 0.4s;
+    transition-timing-function: ease;
+}
+body {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
 }
