--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Dessert</title>
-    <link rel="stylesheet" href="../static/css/index.css"/>
+    <link rel="stylesheet" href="../static/css/mainPage.css"/>
+    <link rel="stylesheet" href="../static/css/header.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
@@ -12,26 +13,9 @@
 </head>
 <body>
     <header>
-        <div class="inner">
-            <nav class="navbar">
-                <div class="container-fluid">
-                    <div class="navbar-header">
-                        <a class="navbar-brand" href="#">DE BON</a>
-                    </div>
-                    <div>
-                        <ul class="nav navbar-nav navbar-right">
-                            <li><a href="#">BRAND</a></li>
-                            <li><a href="#">MENU</a></li>
-                            <li><a href="#">FRANCHISE</a></li>
-                            <li><a href="#">ORDER</a></li>
-                            <li><a href="#">NEWS</a></li>
-                            <li><a href="#">LOGIN</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </div>
+
     </header>
+
     <div class="title">
         <p class="top">PREMIUM CAKE & TARTE</p>
         <h1 class="debon">DE BON</h1>
@@ -103,6 +87,6 @@
             </article>
         </div>
     </section>
-    <script src="../static/js/index.js"></script>
+    <script src="../static/js/header.js"></script>
 </body>
 </html>
