메인 페이지 전체 구조 설정

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -24,7 +24,7 @@ header:after {
     content: "";
 }
 .down {
-    background-color: rgba(0,0,0,.8);
+    background-color: rgb(98, 62, 39);
     -webkit-transition-duration: 0.4s;
     -webkit-transition-timing-function: ease;
     transition-duration: 0.4s;
