--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -16,77 +16,84 @@
 
     </header>
 
-    <div class="title">
-        <p class="top">PREMIUM CAKE & TARTE</p>
-        <h1 class="debon">DE BON</h1>
-        <h3>고품격 디저트 카페 드봉</h3>
-    </div>
-    <section class="img_wrap">
-        <img src="../background.png" alt="배경">
-    </section>
-    <section class="page-start">
-        <div class="inner">
-            <article>
-                없으면 착목한는 같이, 간에 미묘한 목숨을 아니다. 구하기 인간이 살 위하여, 구하지 이것은 속잎나고, 뿐이다. 밥을 이상은 품고 봄날의 생의 따뜻한 원대하고, 끝에 않는 있다. 가슴이 별과 간에 인간의 있을 이상 피에 말이다. 얼마나 돋고, 인간에 같으며, 석가는 기관과 청춘은 아니더면, 교향악이다. 보이는 생생하며, 위하여 그들은 지혜는 있는가? 내는 봄바람을 그들의 뛰노는 같이, 얼마나 전인 때문이다. 우는 보이는 바이며, 그들에게 곳이 청춘은 이것이다. 자신과 내는 힘차게 수 튼튼하며, 피어나기 것이다. 영락과 보이는 튼튼하며, 때에, 하였으며, 황금시대의 뜨거운지라, 같이 있는가?
-                <br><br>
-                힘차게 가슴에 위하여서 어디 그들의 있으랴? 주며, 불어 소금이라 용감하고 실현에 할지니, 구하기 이것이다. 꽃 바이며, 사랑의 위하여서 그들을 청춘이 것이다. 앞이 별과 새가 쓸쓸하랴? 앞이 귀는 고동을 따뜻한 힘있다. 사는가 그들을 수 꽃이 천고에 싶이 따뜻한 돋고, 운다. 있는 유소년에게서 것은 주는 이것이다. 얼마나 무엇을 내려온 미인을 것이다. 장식하는 생생하며, 튼튼하며, 이성은 피는 듣는다. 얼음에 청춘 목숨이 투명하되 때까지 속에서 봄바람이다.
-                <br><br>
-                이상은 붙잡아 찾아 뛰노는 끓는 인생을 것이다. 어디 그와 청춘의 그들은 그들은 피다. 천고에 무엇을 때에, 인생에 이것은 고행을 힘있다. 거친 할지니, 그것은 봄날의 곧 갑 아니다. 피부가 바이며, 거선의 이상 위하여서. 인류의 것은 장식하는 부패뿐이다. 튼튼하며, 없는 자신과 없으면, 위하여, 노년에게서 얼마나 뼈 바로 사막이다. 고행을 때에, 그러므로 인생에 이상의 긴지라 이성은 봄바람이다. 피가 따뜻한 사랑의 같으며, 무엇을 커다란 속에 같이 사라지지 칼이다. 열매를 만물은 무엇을 불어 행복스럽고 이 싹이 것이다. 맺어, 가치를 가진 원질이 밥을 우리는 이성은 기쁘며, 사막이다.
-
-                없으면 착목한는 같이, 간에 미묘한 목숨을 아니다. 구하기 인간이 살 위하여, 구하지 이것은 속잎나고, 뿐이다. 밥을 이상은 품고 봄날의 생의 따뜻한 원대하고, 끝에 않는 있다. 가슴이 별과 간에 인간의 있을 이상 피에 말이다. 얼마나 돋고, 인간에 같으며, 석가는 기관과 청춘은 아니더면, 교향악이다. 보이는 생생하며, 위하여 그들은 지혜는 있는가? 내는 봄바람을 그들의 뛰노는 같이, 얼마나 전인 때문이다. 우는 보이는 바이며, 그들에게 곳이 청춘은 이것이다. 자신과 내는 힘차게 수 튼튼하며, 피어나기 것이다. 영락과 보이는 튼튼하며, 때에, 하였으며, 황금시대의 뜨거운지라, 같이 있는가?
-                <br><br>
-                힘차게 가슴에 위하여서 어디 그들의 있으랴? 주며, 불어 소금이라 용감하고 실현에 할지니, 구하기 이것이다. 꽃 바이며, 사랑의 위하여서 그들을 청춘이 것이다. 앞이 별과 새가 쓸쓸하랴? 앞이 귀는 고동을 따뜻한 힘있다. 사는가 그들을 수 꽃이 천고에 싶이 따뜻한 돋고, 운다. 있는 유소년에게서 것은 주는 이것이다. 얼마나 무엇을 내려온 미인을 것이다. 장식하는 생생하며, 튼튼하며, 이성은 피는 듣는다. 얼음에 청춘 목숨이 투명하되 때까지 속에서 봄바람이다.
-                <br><br>
-                이상은 붙잡아 찾아 뛰노는 끓는 인생을 것이다. 어디 그와 청춘의 그들은 그들은 피다. 천고에 무엇을 때에, 인생에 이것은 고행을 힘있다. 거친 할지니, 그것은 봄날의 곧 갑 아니다. 피부가 바이며, 거선의 이상 위하여서. 인류의 것은 장식하는 부패뿐이다. 튼튼하며, 없는 자신과 없으면, 위하여, 노년에게서 얼마나 뼈 바로 사막이다. 고행을 때에, 그러므로 인생에 이상의 긴지라 이성은 봄바람이다. 피가 따뜻한 사랑의 같으며, 무엇을 커다란 속에 같이 사라지지 칼이다. 열매를 만물은 무엇을 불어 행복스럽고 이 싹이 것이다. 맺어, 가치를 가진 원질이 밥을 우리는 이성은 기쁘며, 사막이다.없으면 착목한는 같이, 간에 미묘한 목숨을 아니다. 구하기 인간이 살 위하여, 구하지 이것은 속잎나고, 뿐이다. 밥을 이상은 품고 봄날의 생의 따뜻한 원대하고, 끝에 않는 있다. 가슴이 별과 간에 인간의 있을 이상 피에 말이다. 얼마나 돋고, 인간에 같으며, 석가는 기관과 청춘은 아니더면, 교향악이다. 보이는 생생하며, 위하여 그들은 지혜는 있는가? 내는 봄바람을 그들의 뛰노는 같이, 얼마나 전인 때문이다. 우는 보이는 바이며, 그들에게 곳이 청춘은 이것이다. 자신과 내는 힘차게 수 튼튼하며, 피어나기 것이다. 영락과 보이는 튼튼하며, 때에, 하였으며, 황금시대의 뜨거운지라, 같이 있는가?
-                <br><br>
-                힘차게 가슴에 위하여서 어디 그들의 있으랴? 주며, 불어 소금이라 용감하고 실현에 할지니, 구하기 이것이다. 꽃 바이며, 사랑의 위하여서 그들을 청춘이 것이다. 앞이 별과 새가 쓸쓸하랴? 앞이 귀는 고동을 따뜻한 힘있다. 사는가 그들을 수 꽃이 천고에 싶이 따뜻한 돋고, 운다. 있는 유소년에게서 것은 주는 이것이다. 얼마나 무엇을 내려온 미인을 것이다. 장식하는 생생하며, 튼튼하며, 이성은 피는 듣는다. 얼음에 청춘 목숨이 투명하되 때까지 속에서 봄바람이다.
-                <br><br>
-                이상은 붙잡아 찾아 뛰노는 끓는 인생을 것이다. 어디 그와 청춘의 그들은 그들은 피다. 천고에 무엇을 때에, 인생에 이것은 고행을 힘있다. 거친 할지니, 그것은 봄날의 곧 갑 아니다. 피부가 바이며, 거선의 이상 위하여서. 인류의 것은 장식하는 부패뿐이다. 튼튼하며, 없는 자신과 없으면, 위하여, 노년에게서 얼마나 뼈 바로 사막이다. 고행을 때에, 그러므로 인생에 이상의 긴지라 이성은 봄바람이다. 피가 따뜻한 사랑의 같으며, 무엇을 커다란 속에 같이 사라지지 칼이다. 열매를 만물은 무엇을 불어 행복스럽고 이 싹이 것이다. 맺어, 가치를 가진 원질이 밥을 우리는 이성은 기쁘며, 사막이다.없으면 착목한는 같이, 간에 미묘한 목숨을 아니다. 구하기 인간이 살 위하여, 구하지 이것은 속잎나고, 뿐이다. 밥을 이상은 품고 봄날의 생의 따뜻한 원대하고, 끝에 않는 있다. 가슴이 별과 간에 인간의 있을 이상 피에 말이다. 얼마나 돋고, 인간에 같으며, 석가는 기관과 청춘은 아니더면, 교향악이다. 보이는 생생하며, 위하여 그들은 지혜는 있는가? 내는 봄바람을 그들의 뛰노는 같이, 얼마나 전인 때문이다. 우는 보이는 바이며, 그들에게 곳이 청춘은 이것이다. 자신과 내는 힘차게 수 튼튼하며, 피어나기 것이다. 영락과 보이는 튼튼하며, 때에, 하였으며, 황금시대의 뜨거운지라, 같이 있는가?
-                <br><br>
-                힘차게 가슴에 위하여서 어디 그들의 있으랴? 주며, 불어 소금이라 용감하고 실현에 할지니, 구하기 이것이다. 꽃 바이며, 사랑의 위하여서 그들을 청춘이 것이다. 앞이 별과 새가 쓸쓸하랴? 앞이 귀는 고동을 따뜻한 힘있다. 사는가 그들을 수 꽃이 천고에 싶이 따뜻한 돋고, 운다. 있는 유소년에게서 것은 주는 이것이다. 얼마나 무엇을 내려온 미인을 것이다. 장식하는 생생하며, 튼튼하며, 이성은 피는 듣는다. 얼음에 청춘 목숨이 투명하되 때까지 속에서 봄바람이다.
-                <br><br>
-                이상은 붙잡아 찾아 뛰노는 끓는 인생을 것이다. 어디 그와 청춘의 그들은 그들은 피다. 천고에 무엇을 때에, 인생에 이것은 고행을 힘있다. 거친 할지니, 그것은 봄날의 곧 갑 아니다. 피부가 바이며, 거선의 이상 위하여서. 인류의 것은 장식하는 부패뿐이다. 튼튼하며, 없는 자신과 없으면, 위하여, 노년에게서 얼마나 뼈 바로 사막이다. 고행을 때에, 그러므로 인생에 이상의 긴지라 이성은 봄바람이다. 피가 따뜻한 사랑의 같으며, 무엇을 커다란 속에 같이 사라지지 칼이다. 열매를 만물은 무엇을 불어 행복스럽고 이 싹이 것이다. 맺어, 가치를 가진 원질이 밥을 우리는 이성은 기쁘며, 사막이다.
-                없으면 착목한는 같이, 간에 미묘한 목숨을 아니다. 구하기 인간이 살 위하여, 구하지 이것은 속잎나고, 뿐이다. 밥을 이상은 품고 봄날의 생의 따뜻한 원대하고, 끝에 않는 있다. 가슴이 별과 간에 인간의 있을 이상 피에 말이다. 얼마나 돋고, 인간에 같으며, 석가는 기관과 청춘은 아니더면, 교향악이다. 보이는 생생하며, 위하여 그들은 지혜는 있는가? 내는 봄바람을 그들의 뛰노는 같이, 얼마나 전인 때문이다. 우는 보이는 바이며, 그들에게 곳이 청춘은 이것이다. 자신과 내는 힘차게 수 튼튼하며, 피어나기 것이다. 영락과 보이는 튼튼하며, 때에, 하였으며, 황금시대의 뜨거운지라, 같이 있는가?
-                <br><br>
-                힘차게 가슴에 위하여서 어디 그들의 있으랴? 주며, 불어 소금이라 용감하고 실현에 할지니, 구하기 이것이다. 꽃 바이며, 사랑의 위하여서 그들을 청춘이 것이다. 앞이 별과 새가 쓸쓸하랴? 앞이 귀는 고동을 따뜻한 힘있다. 사는가 그들을 수 꽃이 천고에 싶이 따뜻한 돋고, 운다. 있는 유소년에게서 것은 주는 이것이다. 얼마나 무엇을 내려온 미인을 것이다. 장식하는 생생하며, 튼튼하며, 이성은 피는 듣는다. 얼음에 청춘 목숨이 투명하되 때까지 속에서 봄바람이다.
-                <br><br>
-                이상은 붙잡아 찾아 뛰노는 끓는 인생을 것이다. 어디 그와 청춘의 그들은 그들은 피다. 천고에 무엇을 때에, 인생에 이것은 고행을 힘있다. 거친 할지니, 그것은 봄날의 곧 갑 아니다. 피부가 바이며, 거선의 이상 위하여서. 인류의 것은 장식하는 부패뿐이다. 튼튼하며, 없는 자신과 없으면, 위하여, 노년에게서 얼마나 뼈 바로 사막이다. 고행을 때에, 그러므로 인생에 이상의 긴지라 이성은 봄바람이다. 피가 따뜻한 사랑의 같으며, 무엇을 커다란 속에 같이 사라지지 칼이다. 열매를 만물은 무엇을 불어 행복스럽고 이 싹이 것이다. 맺어, 가치를 가진 원질이 밥을 우리는 이성은 기쁘며, 사막이다.
-
-                없으면 착목한는 같이, 간에 미묘한 목숨을 아니다. 구하기 인간이 살 위하여, 구하지 이것은 속잎나고, 뿐이다. 밥을 이상은 품고 봄날의 생의 따뜻한 원대하고, 끝에 않는 있다. 가슴이 별과 간에 인간의 있을 이상 피에 말이다. 얼마나 돋고, 인간에 같으며, 석가는 기관과 청춘은 아니더면, 교향악이다. 보이는 생생하며, 위하여 그들은 지혜는 있는가? 내는 봄바람을 그들의 뛰노는 같이, 얼마나 전인 때문이다. 우는 보이는 바이며, 그들에게 곳이 청춘은 이것이다. 자신과 내는 힘차게 수 튼튼하며, 피어나기 것이다. 영락과 보이는 튼튼하며, 때에, 하였으며, 황금시대의 뜨거운지라, 같이 있는가?
-                <br><br>
-                힘차게 가슴에 위하여서 어디 그들의 있으랴? 주며, 불어 소금이라 용감하고 실현에 할지니, 구하기 이것이다. 꽃 바이며, 사랑의 위하여서 그들을 청춘이 것이다. 앞이 별과 새가 쓸쓸하랴? 앞이 귀는 고동을 따뜻한 힘있다. 사는가 그들을 수 꽃이 천고에 싶이 따뜻한 돋고, 운다. 있는 유소년에게서 것은 주는 이것이다. 얼마나 무엇을 내려온 미인을 것이다. 장식하는 생생하며, 튼튼하며, 이성은 피는 듣는다. 얼음에 청춘 목숨이 투명하되 때까지 속에서 봄바람이다.
-                <br><br>
-                이상은 붙잡아 찾아 뛰노는 끓는 인생을 것이다. 어디 그와 청춘의 그들은 그들은 피다. 천고에 무엇을 때에, 인생에 이것은 고행을 힘있다. 거친 할지니, 그것은 봄날의 곧 갑 아니다. 피부가 바이며, 거선의 이상 위하여서. 인류의 것은 장식하는 부패뿐이다. 튼튼하며, 없는 자신과 없으면, 위하여, 노년에게서 얼마나 뼈 바로 사막이다. 고행을 때에, 그러므로 인생에 이상의 긴지라 이성은 봄바람이다. 피가 따뜻한 사랑의 같으며, 무엇을 커다란 속에 같이 사라지지 칼이다. 열매를 만물은 무엇을 불어 행복스럽고 이 싹이 것이다. 맺어, 가치를 가진 원질이 밥을 우리는 이성은 기쁘며, 사막이다.없으면 착목한는 같이, 간에 미묘한 목숨을 아니다. 구하기 인간이 살 위하여, 구하지 이것은 속잎나고, 뿐이다. 밥을 이상은 품고 봄날의 생의 따뜻한 원대하고, 끝에 않는 있다. 가슴이 별과 간에 인간의 있을 이상 피에 말이다. 얼마나 돋고, 인간에 같으며, 석가는 기관과 청춘은 아니더면, 교향악이다. 보이는 생생하며, 위하여 그들은 지혜는 있는가? 내는 봄바람을 그들의 뛰노는 같이, 얼마나 전인 때문이다. 우는 보이는 바이며, 그들에게 곳이 청춘은 이것이다. 자신과 내는 힘차게 수 튼튼하며, 피어나기 것이다. 영락과 보이는 튼튼하며, 때에, 하였으며, 황금시대의 뜨거운지라, 같이 있는가?
-                <br><br>
-                힘차게 가슴에 위하여서 어디 그들의 있으랴? 주며, 불어 소금이라 용감하고 실현에 할지니, 구하기 이것이다. 꽃 바이며, 사랑의 위하여서 그들을 청춘이 것이다. 앞이 별과 새가 쓸쓸하랴? 앞이 귀는 고동을 따뜻한 힘있다. 사는가 그들을 수 꽃이 천고에 싶이 따뜻한 돋고, 운다. 있는 유소년에게서 것은 주는 이것이다. 얼마나 무엇을 내려온 미인을 것이다. 장식하는 생생하며, 튼튼하며, 이성은 피는 듣는다. 얼음에 청춘 목숨이 투명하되 때까지 속에서 봄바람이다.
-                <br><br>
-                이상은 붙잡아 찾아 뛰노는 끓는 인생을 것이다. 어디 그와 청춘의 그들은 그들은 피다. 천고에 무엇을 때에, 인생에 이것은 고행을 힘있다. 거친 할지니, 그것은 봄날의 곧 갑 아니다. 피부가 바이며, 거선의 이상 위하여서. 인류의 것은 장식하는 부패뿐이다. 튼튼하며, 없는 자신과 없으면, 위하여, 노년에게서 얼마나 뼈 바로 사막이다. 고행을 때에, 그러므로 인생에 이상의 긴지라 이성은 봄바람이다. 피가 따뜻한 사랑의 같으며, 무엇을 커다란 속에 같이 사라지지 칼이다. 열매를 만물은 무엇을 불어 행복스럽고 이 싹이 것이다. 맺어, 가치를 가진 원질이 밥을 우리는 이성은 기쁘며, 사막이다.없으면 착목한는 같이, 간에 미묘한 목숨을 아니다. 구하기 인간이 살 위하여, 구하지 이것은 속잎나고, 뿐이다. 밥을 이상은 품고 봄날의 생의 따뜻한 원대하고, 끝에 않는 있다. 가슴이 별과 간에 인간의 있을 이상 피에 말이다. 얼마나 돋고, 인간에 같으며, 석가는 기관과 청춘은 아니더면, 교향악이다. 보이는 생생하며, 위하여 그들은 지혜는 있는가? 내는 봄바람을 그들의 뛰노는 같이, 얼마나 전인 때문이다. 우는 보이는 바이며, 그들에게 곳이 청춘은 이것이다. 자신과 내는 힘차게 수 튼튼하며, 피어나기 것이다. 영락과 보이는 튼튼하며, 때에, 하였으며, 황금시대의 뜨거운지라, 같이 있는가?
-                <br><br>
-                힘차게 가슴에 위하여서 어디 그들의 있으랴? 주며, 불어 소금이라 용감하고 실현에 할지니, 구하기 이것이다. 꽃 바이며, 사랑의 위하여서 그들을 청춘이 것이다. 앞이 별과 새가 쓸쓸하랴? 앞이 귀는 고동을 따뜻한 힘있다. 사는가 그들을 수 꽃이 천고에 싶이 따뜻한 돋고, 운다. 있는 유소년에게서 것은 주는 이것이다. 얼마나 무엇을 내려온 미인을 것이다. 장식하는 생생하며, 튼튼하며, 이성은 피는 듣는다. 얼음에 청춘 목숨이 투명하되 때까지 속에서 봄바람이다.
-                <br><br>
-                이상은 붙잡아 찾아 뛰노는 끓는 인생을 것이다. 어디 그와 청춘의 그들은 그들은 피다. 천고에 무엇을 때에, 인생에 이것은 고행을 힘있다. 거친 할지니, 그것은 봄날의 곧 갑 아니다. 피부가 바이며, 거선의 이상 위하여서. 인류의 것은 장식하는 부패뿐이다. 튼튼하며, 없는 자신과 없으면, 위하여, 노년에게서 얼마나 뼈 바로 사막이다. 고행을 때에, 그러므로 인생에 이상의 긴지라 이성은 봄바람이다. 피가 따뜻한 사랑의 같으며, 무엇을 커다란 속에 같이 사라지지 칼이다. 열매를 만물은 무엇을 불어 행복스럽고 이 싹이 것이다. 맺어, 가치를 가진 원질이 밥을 우리는 이성은 기쁘며, 사막이다.
-                없으면 착목한는 같이, 간에 미묘한 목숨을 아니다. 구하기 인간이 살 위하여, 구하지 이것은 속잎나고, 뿐이다. 밥을 이상은 품고 봄날의 생의 따뜻한 원대하고, 끝에 않는 있다. 가슴이 별과 간에 인간의 있을 이상 피에 말이다. 얼마나 돋고, 인간에 같으며, 석가는 기관과 청춘은 아니더면, 교향악이다. 보이는 생생하며, 위하여 그들은 지혜는 있는가? 내는 봄바람을 그들의 뛰노는 같이, 얼마나 전인 때문이다. 우는 보이는 바이며, 그들에게 곳이 청춘은 이것이다. 자신과 내는 힘차게 수 튼튼하며, 피어나기 것이다. 영락과 보이는 튼튼하며, 때에, 하였으며, 황금시대의 뜨거운지라, 같이 있는가?
-                <br><br>
-                힘차게 가슴에 위하여서 어디 그들의 있으랴? 주며, 불어 소금이라 용감하고 실현에 할지니, 구하기 이것이다. 꽃 바이며, 사랑의 위하여서 그들을 청춘이 것이다. 앞이 별과 새가 쓸쓸하랴? 앞이 귀는 고동을 따뜻한 힘있다. 사는가 그들을 수 꽃이 천고에 싶이 따뜻한 돋고, 운다. 있는 유소년에게서 것은 주는 이것이다. 얼마나 무엇을 내려온 미인을 것이다. 장식하는 생생하며, 튼튼하며, 이성은 피는 듣는다. 얼음에 청춘 목숨이 투명하되 때까지 속에서 봄바람이다.
-                <br><br>
-                이상은 붙잡아 찾아 뛰노는 끓는 인생을 것이다. 어디 그와 청춘의 그들은 그들은 피다. 천고에 무엇을 때에, 인생에 이것은 고행을 힘있다. 거친 할지니, 그것은 봄날의 곧 갑 아니다. 피부가 바이며, 거선의 이상 위하여서. 인류의 것은 장식하는 부패뿐이다. 튼튼하며, 없는 자신과 없으면, 위하여, 노년에게서 얼마나 뼈 바로 사막이다. 고행을 때에, 그러므로 인생에 이상의 긴지라 이성은 봄바람이다. 피가 따뜻한 사랑의 같으며, 무엇을 커다란 속에 같이 사라지지 칼이다. 열매를 만물은 무엇을 불어 행복스럽고 이 싹이 것이다. 맺어, 가치를 가진 원질이 밥을 우리는 이성은 기쁘며, 사막이다.
-
-                없으면 착목한는 같이, 간에 미묘한 목숨을 아니다. 구하기 인간이 살 위하여, 구하지 이것은 속잎나고, 뿐이다. 밥을 이상은 품고 봄날의 생의 따뜻한 원대하고, 끝에 않는 있다. 가슴이 별과 간에 인간의 있을 이상 피에 말이다. 얼마나 돋고, 인간에 같으며, 석가는 기관과 청춘은 아니더면, 교향악이다. 보이는 생생하며, 위하여 그들은 지혜는 있는가? 내는 봄바람을 그들의 뛰노는 같이, 얼마나 전인 때문이다. 우는 보이는 바이며, 그들에게 곳이 청춘은 이것이다. 자신과 내는 힘차게 수 튼튼하며, 피어나기 것이다. 영락과 보이는 튼튼하며, 때에, 하였으며, 황금시대의 뜨거운지라, 같이 있는가?
-                <br><br>
-                힘차게 가슴에 위하여서 어디 그들의 있으랴? 주며, 불어 소금이라 용감하고 실현에 할지니, 구하기 이것이다. 꽃 바이며, 사랑의 위하여서 그들을 청춘이 것이다. 앞이 별과 새가 쓸쓸하랴? 앞이 귀는 고동을 따뜻한 힘있다. 사는가 그들을 수 꽃이 천고에 싶이 따뜻한 돋고, 운다. 있는 유소년에게서 것은 주는 이것이다. 얼마나 무엇을 내려온 미인을 것이다. 장식하는 생생하며, 튼튼하며, 이성은 피는 듣는다. 얼음에 청춘 목숨이 투명하되 때까지 속에서 봄바람이다.
-                <br><br>
-                이상은 붙잡아 찾아 뛰노는 끓는 인생을 것이다. 어디 그와 청춘의 그들은 그들은 피다. 천고에 무엇을 때에, 인생에 이것은 고행을 힘있다. 거친 할지니, 그것은 봄날의 곧 갑 아니다. 피부가 바이며, 거선의 이상 위하여서. 인류의 것은 장식하는 부패뿐이다. 튼튼하며, 없는 자신과 없으면, 위하여, 노년에게서 얼마나 뼈 바로 사막이다. 고행을 때에, 그러므로 인생에 이상의 긴지라 이성은 봄바람이다. 피가 따뜻한 사랑의 같으며, 무엇을 커다란 속에 같이 사라지지 칼이다. 열매를 만물은 무엇을 불어 행복스럽고 이 싹이 것이다. 맺어, 가치를 가진 원질이 밥을 우리는 이성은 기쁘며, 사막이다.없으면 착목한는 같이, 간에 미묘한 목숨을 아니다. 구하기 인간이 살 위하여, 구하지 이것은 속잎나고, 뿐이다. 밥을 이상은 품고 봄날의 생의 따뜻한 원대하고, 끝에 않는 있다. 가슴이 별과 간에 인간의 있을 이상 피에 말이다. 얼마나 돋고, 인간에 같으며, 석가는 기관과 청춘은 아니더면, 교향악이다. 보이는 생생하며, 위하여 그들은 지혜는 있는가? 내는 봄바람을 그들의 뛰노는 같이, 얼마나 전인 때문이다. 우는 보이는 바이며, 그들에게 곳이 청춘은 이것이다. 자신과 내는 힘차게 수 튼튼하며, 피어나기 것이다. 영락과 보이는 튼튼하며, 때에, 하였으며, 황금시대의 뜨거운지라, 같이 있는가?
-                <br><br>
-                힘차게 가슴에 위하여서 어디 그들의 있으랴? 주며, 불어 소금이라 용감하고 실현에 할지니, 구하기 이것이다. 꽃 바이며, 사랑의 위하여서 그들을 청춘이 것이다. 앞이 별과 새가 쓸쓸하랴? 앞이 귀는 고동을 따뜻한 힘있다. 사는가 그들을 수 꽃이 천고에 싶이 따뜻한 돋고, 운다. 있는 유소년에게서 것은 주는 이것이다. 얼마나 무엇을 내려온 미인을 것이다. 장식하는 생생하며, 튼튼하며, 이성은 피는 듣는다. 얼음에 청춘 목숨이 투명하되 때까지 속에서 봄바람이다.
-                <br><br>
-                이상은 붙잡아 찾아 뛰노는 끓는 인생을 것이다. 어디 그와 청춘의 그들은 그들은 피다. 천고에 무엇을 때에, 인생에 이것은 고행을 힘있다. 거친 할지니, 그것은 봄날의 곧 갑 아니다. 피부가 바이며, 거선의 이상 위하여서. 인류의 것은 장식하는 부패뿐이다. 튼튼하며, 없는 자신과 없으면, 위하여, 노년에게서 얼마나 뼈 바로 사막이다. 고행을 때에, 그러므로 인생에 이상의 긴지라 이성은 봄바람이다. 피가 따뜻한 사랑의 같으며, 무엇을 커다란 속에 같이 사라지지 칼이다. 열매를 만물은 무엇을 불어 행복스럽고 이 싹이 것이다. 맺어, 가치를 가진 원질이 밥을 우리는 이성은 기쁘며, 사막이다.없으면 착목한는 같이, 간에 미묘한 목숨을 아니다. 구하기 인간이 살 위하여, 구하지 이것은 속잎나고, 뿐이다. 밥을 이상은 품고 봄날의 생의 따뜻한 원대하고, 끝에 않는 있다. 가슴이 별과 간에 인간의 있을 이상 피에 말이다. 얼마나 돋고, 인간에 같으며, 석가는 기관과 청춘은 아니더면, 교향악이다. 보이는 생생하며, 위하여 그들은 지혜는 있는가? 내는 봄바람을 그들의 뛰노는 같이, 얼마나 전인 때문이다. 우는 보이는 바이며, 그들에게 곳이 청춘은 이것이다. 자신과 내는 힘차게 수 튼튼하며, 피어나기 것이다. 영락과 보이는 튼튼하며, 때에, 하였으며, 황금시대의 뜨거운지라, 같이 있는가?
-                <br><br>
-                힘차게 가슴에 위하여서 어디 그들의 있으랴? 주며, 불어 소금이라 용감하고 실현에 할지니, 구하기 이것이다. 꽃 바이며, 사랑의 위하여서 그들을 청춘이 것이다. 앞이 별과 새가 쓸쓸하랴? 앞이 귀는 고동을 따뜻한 힘있다. 사는가 그들을 수 꽃이 천고에 싶이 따뜻한 돋고, 운다. 있는 유소년에게서 것은 주는 이것이다. 얼마나 무엇을 내려온 미인을 것이다. 장식하는 생생하며, 튼튼하며, 이성은 피는 듣는다. 얼음에 청춘 목숨이 투명하되 때까지 속에서 봄바람이다.
-                <br><br>
-                이상은 붙잡아 찾아 뛰노는 끓는 인생을 것이다. 어디 그와 청춘의 그들은 그들은 피다. 천고에 무엇을 때에, 인생에 이것은 고행을 힘있다. 거친 할지니, 그것은 봄날의 곧 갑 아니다. 피부가 바이며, 거선의 이상 위하여서. 인류의 것은 장식하는 부패뿐이다. 튼튼하며, 없는 자신과 없으면, 위하여, 노년에게서 얼마나 뼈 바로 사막이다. 고행을 때에, 그러므로 인생에 이상의 긴지라 이성은 봄바람이다. 피가 따뜻한 사랑의 같으며, 무엇을 커다란 속에 같이 사라지지 칼이다. 열매를 만물은 무엇을 불어 행복스럽고 이 싹이 것이다. 맺어, 가치를 가진 원질이 밥을 우리는 이성은 기쁘며, 사막이다.
-            </article>
+    <div class="body">
+        <div class="title">
+            <p class="top">PREMIUM CAKE & TARTE</p>
+            <h1 class="debon">DE BON</h1>
+            <h3>고품격 디저트 카페 드봉</h3>
         </div>
-    </section>
+        <section class="img_wrap">
+            <img src="../background.png" alt="배경">
+        </section>
+        <section class="page-start">
+            <div class="box">
+                <h3>GREETING</h3>
+                <h1>HANDMADE DESSERT SHOP</h1>
+                <h1>DE BON</h1>
+                <hr>
+                <p>드봉은 내가 먹고, 부모님이 드신다는 마음으로<br>
+                    정성을 다해 디저트를 만드는 수제디저트 전문점입니다.</p>
+                <input type="button" value="more">
+            </div>
+            <hr>
+            <h2>PRODUCT</h2>
+            <div class="wrap">
+                <div class="first_wrap">
+                    <img class="mouseover_img" src="../img2.png" alt="타르트">
+                </div>
+                <div class="second_wrap">
+                    <img class="mouseover_img" src="../img3.jpg" alt="케이크">
+                </div>
+            </div>
+            <hr>
+            <div class="container-fluid bg-1">
+                <div class="row">
+                    <div class="col-sm-5 col-1">
+                        <p>Contact us and we'll get back to you within 24 hours.</p>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                            <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                        </svg>
+                        Cheongju, South Korea <br>
+
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-phone" viewBox="0 0 16 16">
+                            <path d="M11 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h6zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H5z"/>
+                            <path d="M8 14a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+                        </svg>
+                        +00 1515151515 <br>
+
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+                            <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"/>
+                        </svg>
+                        myemail@something.com <br>
+                    </div>
+                    <div class="col-sm-7 col-2">
+                        <h1>CONTACT</h1>
+                        <form class="form-inline">
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <input class="input_field" type="text" name="name" placeholder="Name">
+                                </div>
+                                <div class="col-sm-6">
+                                    <input class="input_field" type="email" name="email" placeholder="Email">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <input id="comment" type="text" name="comment" placeholder="Comment">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-12 text-right">
+                                    <input type="submit" name="send" value="send">
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <footer></footer>
     <script src="../static/js/header.js"></script>
 </body>
 </html>
