--- a/static/css/news.css
+++ b/static/css/news.css
@@ -4,6 +4,7 @@
     to { opacity: 1; transform: translateZ(0); }
 }
 header, h2 { font-family: 'KoPub Batang', serif; }
+header { position: relative;}
 h2 { font-size: 50px;  font-weight: bolder; }
 .title{
     display: none;  position: absolute;
@@ -18,7 +19,7 @@ h2 { font-size: 50px;  font-weight: bolder; }
 
 .img_wrap { width: 100%;}
 .img_wrap img {
-    display: block;  margin: 0;
+    display: none;  margin: 0;
     width: 100%;     height: 500px;
     background-blend-mode: darken;
 }
