--- a/templates/news.html
+++ b/templates/news.html
@@ -23,7 +23,7 @@
         <p>드봉의 공지사항을 안내해드립니다.</p>
     </div>
     <div class="img_wrap">
-        <img src="../static/src/news.jpg" alt="배경">
+        <img src="../static/src/news.jpg" id="image" alt="배경">
     </div>
 
     <div id="container">
@@ -32,13 +32,13 @@
             <li class="on"><a href="#">공지사항</a></li>
         </div>
     </div>
-    <div class="notice">
-        <ul class="rolling">
-            <li><a href="#">공지사항 게시판이 오픈하였습니다.</a></li>
-            <li><a href="#">주문 오류 관련 사항 안내</a></li>
-        </ul>
-    </div>
     <section class="page-start">
+        <div class="notice">
+            <ul class="rolling">
+                <li><a href="#">공지사항 게시판이 오픈하였습니다.</a></li>
+                <li><a href="#">주문 오류 관련 사항 안내</a></li>
+            </ul>
+        </div>
         <div id="middleArea">
             <!-- middleArea --><!-- 상단정보 (센터정렬) -->
 			<aside id="contentNews" class="content_css">
