--- a/static/css/mainPage.css
+++ b/static/css/mainPage.css
@@ -1,118 +1,187 @@
 @import url(//fonts.googleapis.com/earlyaccess/kopubbatang.css);
 
 .kopubbatang * {
-    font-family: 'KoPub Batang', serif;
+  font-family: "KoPub Batang", serif;
 }
-.top{
-    font-size: 30px;
+.top {
+  font-size: 30px;
 }
 @keyframes fadeInDown {
-    0% {
-        opacity: 0;
-        transform: translate3d(0, -100%, 0);
-    }
-    to {
-        opacity: 1;
-        transform: translateZ(0);
-    }
+  0% {
+    opacity: 0;
+    transform: translate3d(0, -100%, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translateZ(0);
+  }
 }
-.title{
-    display: none;
-    animation: fadeInDown 1s;
-    position: absolute;
-    top: 200px;
-    left: 500px;
+.title {
+  display: none;
+  animation: fadeInDown 1s;
+  position: absolute;
+  top: 200px;
+  left: 500px;
 }
-.debon{
-    font-size: 150px;
-    margin-top: -30px;
+.debon {
+  font-size: 150px;
+  margin-top: -30px;
 }
 .img_wrap {
-    width: 100%;
+  width: 100%;
 }
 .img_wrap img {
-    display: block;
-    width: 100%;
-    margin: 0;
+  display: block;
+  width: 100%;
+  margin: 0;
 }
 body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
-.body{
-    background-color: #F9F8EA;
-    text-align: center;
+.body {
+  background-color: #f9f8ea;
+  text-align: center;
 }
-.box{
-    padding: 100px;
-    background-color: white;
-    margin-top: 100px;
-    margin-left: 300px;
-    width: 1000px;
-    height: 500px;
+.box {
+  padding: 100px;
+  background-color: white;
+  margin-top: 100px;
+  margin-left: 300px;
+  width: 1000px;
+  height: 500px;
 }
 
 .bg-1 {
-    margin-top: 50px;
+  margin-top: 50px;
 }
-.col-1{
-    padding-top: 170px;
-    padding-bottom: 100px;
+.col-1 {
+  padding-top: 170px;
+  padding-bottom: 100px;
 }
-.col-2{
-    padding-top: 180px;
-    padding-bottom: 80px;
+.col-2 {
+  padding-top: 180px;
+  padding-bottom: 80px;
 }
-.input_field{
-    margin-top: 10px;
-    width: 100%;
+.input_field {
+  margin-top: 10px;
+  width: 100%;
 }
-#comment{
-    margin-top: 10px;
-    margin-bottom: 10px;
-    width: 100%;
-    height: 150px;
-}
-
-.wrap{
-    margin-top: 50px;
-}
-.first_wrap, .second_wrap{
-    width: 650px;
-    height: 450px;
-    float: left;
-    overflow:hidden;
-}
-.mouseover_img{
-    width: 100%;
-    height: 100%;
-    z-index: 0;
-}
-#map{
-    width:500px;
-    height: 400px;
-    margin-left: 100px;
-}
-.inner_box{
-    display: none;
-    position: absolute;
-    top: 80px;
-    left: 130px;
-    width: 400px;
-    height: 300px;
-    background-color: white;
-    opacity: 0.7;
+#comment {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 100%;
+  height: 150px;
 }
 
-.vertical_hr{
-    margin-top: 35px;
-    height: 5vh;
-    width: .1vw;
-    border-width: 0;
-    color: #000;
-    background-color: #000;
+.wrap {
+  margin-top: 50px;
+}
+.first_wrap,
+.second_wrap {
+  width: 650px;
+  height: 450px;
+  float: left;
+  overflow: hidden;
+}
+.mouseover_img {
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+#map {
+  width: 500px;
+  height: 400px;
+  margin-left: 100px;
+}
+.inner_box {
+  display: none;
+  position: absolute;
+  top: 80px;
+  left: 130px;
+  width: 400px;
+  height: 300px;
+  background-color: white;
+  opacity: 0.7;
 }
 
-hr{
-    height: 2px;
+.vertical_hr {
+  margin-top: 35px;
+  height: 5vh;
+  width: 0.1vw;
+  border-width: 0;
+  color: #000;
+  background-color: #000;
+}
+
+hr {
+  height: 2px;
+}
+
+/* footer */
+
+.logo {
+  font-size: 35px;
+  letter-spacing: 5px;
+  position: absolute;
+  left: 35px;
+  top: 27px;
+  text-decoration: none;
+  /* color: white; */
+  color: #37131e;
+}
+
+footer {
+  position: relative;
+  background-color: #bfb1a4;
+}
+
+footer ul li {
+  position: absolute;
+  float: left;
+  list-style: none;
+  font-weight: bold;
+  margin-right: 1.5%;
+  top: 3.4vh;
+}
+
+footer .splitBar {
+  cursor: default;
+  position: absolute;
+  top: 3.3vh;
+  text-decoration: none;
+  color: #37131e;
+}
+
+footer ul li:nth-of-type(1) {
+  left: 15vw;
+}
+
+footer ul li:nth-of-type(2) {
+  left: 19.3vw;
+}
+
+footer ul li:nth-of-type(3) {
+  left: 20vw;
+}
+
+footer ul li:nth-of-type(4) {
+  left: 24.3vw;
+}
+
+footer ul li:nth-of-type(5) {
+  left: 25vw;
+}
+
+footer ul li a {
+  color: #37131e;
+  text-decoration: none;
+}
+
+footer pre {
+  position: absolute;
+  left: 15vw;
+  top: 7vh;
+  padding-right: 5vw;
+  /* color: #e0e0e0; */
 }
