--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -1,103 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Dessert</title>
-    <link rel="stylesheet" href="../static/css/mainPage.css"/>
-    <link rel="stylesheet" href="../static/css/header.css"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="../static/css/mainPage.css" />
+    <link rel="stylesheet" href="../static/css/header.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat"
+      rel="stylesheet"
+    />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <header></header>
 
     <div class="body">
-        <div class="title">
-            <p class="top">PREMIUM CAKE & TARTE</p>
-            <h1 class="debon">DE BON</h1>
-            <h3>고품격 디저트 카페 드봉</h3>
+      <div class="title">
+        <p class="top">PREMIUM CAKE & TARTE</p>
+        <h1 class="debon">DE BON</h1>
+        <h3>고품격 디저트 카페 드봉</h3>
+      </div>
+      <section class="img_wrap">
+        <img src="../static/src/background.png" alt="배경" />
+      </section>
+      <section class="page-start">
+        <div class="box">
+          <h3>GREETING</h3>
+          <h1>HANDMADE DESSERT SHOP</h1>
+          <h1>DE BON</h1>
+          <hr />
+          <p>
+            드봉은 내가 먹고, 부모님이 드신다는 마음으로<br />
+            정성을 다해 디저트를 만드는 수제디저트 전문점입니다.
+          </p>
+          <input type="button" value="more" />
         </div>
-        <section class="img_wrap">
-            <img src="../static/src/background.png" alt="배경">
-        </section>
-        <section class="page-start">
-            <div class="box">
-                <h3>GREETING</h3>
-                <h1>HANDMADE DESSERT SHOP</h1>
-                <h1>DE BON</h1>
-                <hr>
-                <p>드봉은 내가 먹고, 부모님이 드신다는 마음으로<br>
-                    정성을 다해 디저트를 만드는 수제디저트 전문점입니다.</p>
-                <input type="button" value="more">
+        <hr />
+        <h2>PRODUCT</h2>
+        <div class="wrap">
+          <div class="first_wrap" style="margin-left: 110px">
+            <div
+              class="first_wrap"
+              onmouseenter="zoomIn(event)"
+              onmouseleave="zoomOut(event)"
+            >
+              <div class="inner_box">
+                <hr class="vertical_hr" />
+                <p>DE BON</p>
+                <h1 style="margin-top: -5px">
+                  DESSERT<br />
+                  CAFE
+                </h1>
+                <hr class="vertical_hr" />
+              </div>
+              <img
+                class="mouseover_img"
+                src="../static/src/img2.png"
+                alt="타르트"
+              />
             </div>
-            <hr>
-            <h2>PRODUCT</h2>
-            <div class="wrap">
-                <div class="first_wrap" style="margin-left: 110px;">
-                    <div class="first_wrap" onmouseenter="zoomIn(event)" onmouseleave="zoomOut(event)">
-                        <div class="inner_box">
-                            <hr class="vertical_hr">
-                            <p>DE BON</p>
-                            <h1 style="margin-top: -5px;">DESSERT<br>
-                                CAFE</h1>
-                            <hr class="vertical_hr">
-                        </div>
-                        <img class="mouseover_img" src="../static/src/img2.png" alt="타르트">
-                    </div>
-                </div>
-                <div class="second_wrap">
-                    <div class="second_wrap" onmouseenter="zoomIn(event)" onmouseleave="zoomOut(event)">
-                        <div class="inner_box">
-                            <hr class="vertical_hr">
-                            <p>DE BON</p>
-                            <h1 style="margin-top: -5px;">DESSERT<br>
-                                CAFE</h1>
-                            <hr class="vertical_hr">
-                        </div>
-                        <img class="mouseover_img" src="../static/src/img3.jpg" alt="케이크">
-                    </div>
-                </div>
+          </div>
+          <div class="second_wrap">
+            <div
+              class="second_wrap"
+              onmouseenter="zoomIn(event)"
+              onmouseleave="zoomOut(event)"
+            >
+              <div class="inner_box">
+                <hr class="vertical_hr" />
+                <p>DE BON</p>
+                <h1 style="margin-top: -5px">
+                  DESSERT<br />
+                  CAFE
+                </h1>
+                <hr class="vertical_hr" />
+              </div>
+              <img
+                class="mouseover_img"
+                src="../static/src/img3.jpg"
+                alt="케이크"
+              />
             </div>
-            <hr>
-            <div class="container-fluid bg-1">
+          </div>
+        </div>
+        <hr />
+        <div class="container-fluid bg-1">
+          <div class="row">
+            <div class="col-sm-5 col-1">
+              <div id="map"></div>
+            </div>
+            <div class="col-sm-7 col-2">
+              <h1>문의하기</h1>
+              <h3>고객의 소리에 귀 기울이는 드봉이 되겠습니다.</h3>
+              <form class="form-inline">
                 <div class="row">
-                    <div class="col-sm-5 col-1">
-                        <div id="map"></div>
-                    </div>
-                    <div class="col-sm-7 col-2">
-                        <h1>문의하기</h1>
-                        <h3>고객의 소리에 귀 기울이는 드봉이 되겠습니다.</h3>
-                        <form class="form-inline">
-                            <div class="row">
-                                <div class="col-sm-6">
-                                    <input class="input_field" type="text" name="name" placeholder="Name">
-                                </div>
-                                <div class="col-sm-6">
-                                    <input class="input_field" type="email" name="email" placeholder="Email">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <input id="comment" type="text" name="comment" placeholder="ADD A CONTEXT">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-12 text-center">
-                                    <input type="submit" name="send" value="send">
-                                </div>
-                            </div>
-                        </form>
-                    </div>
+                  <div class="col-sm-6">
+                    <input
+                      class="input_field"
+                      type="text"
+                      name="name"
+                      placeholder="Name"
+                    />
+                  </div>
+                  <div class="col-sm-6">
+                    <input
+                      class="input_field"
+                      type="email"
+                      name="email"
+                      placeholder="Email"
+                    />
+                  </div>
                 </div>
+                <div class="row">
+                  <div class="col-sm-12">
+                    <input
+                      id="comment"
+                      type="text"
+                      name="comment"
+                      placeholder="ADD A CONTEXT"
+                    />
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-12 text-center">
+                    <input type="submit" name="send" value="send" />
+                  </div>
+                </div>
+              </form>
             </div>
-        </section>
+          </div>
+        </div>
+      </section>
     </div>
-    <footer></footer>
+    <footer>
+      <a href="index.html" class="logo">DE BON</a>
+      <ul>
+        <li><a href="#">드본소개</a></li>
+        <li class="splitBar">|</li>
+        <li><a href="#">이용약관</a></li>
+        <li class="splitBar">|</li>
+        <li><a href="#">개인정보 처리방침</a></li>
+      </ul>
+      <pre>
+          드본 | 대표자 : 충북대 | 본사 : 서울특별시 성동구 뚝섬로1길 63, 영창디지털타워 11층 | 대표전화 : 1522 - 9774 | 팩스 : 02 - 540 - 2237
+          사업자번호 : 261 - 81 - 15766 | 드본 브레드 사업자번호 : 680 - 87 - 00452
+          사이버몰 내 판매되는 상품 중에는 드본에 등록한 개별 판매자가 판매하는 마켓플레이스(오픈마켓) 상품이 포함되어 있습니다.
+          마켓플레이스(오픈마켓) 상품의 경우 드본은 통신판매중개자이며 통신판매의 당사자가 아닙니다.
+          드본은 마켓플레이스(오픈마켓) 상품, 거래정보 및 거래 등에 대하여 책임을 지지 않습니다.
+          
+          Copyright © 드본 All rights reserved.
+          </pre
+      >
+    </footer>
     <script src="../static/js/header.js"></script>
     <script src="../static/js/mainPage.js"></script>
-    <script class="script_api" src="https://maps.googleapis.com/maps/api/js?key={API_KEY}&callback=myMap"></script>
-</body>
+    <script
+      class="script_api"
+      src="https://maps.googleapis.com/maps/api/js?key={API_KEY}&callback=myMap"
+    ></script>
+  </body>
 </html>
