--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -35,9 +35,13 @@
           <img src="../static/src/img4.jpg" alt="사진4">
           <img src="../static/src/img5.jpg" alt="사진4">
         </div>
+        <a class="scroll_down" href="#page-start">
+          <p id="scroll">SCROLL DOWN</p><br>
+          <span class="glyphicon glyphicon-menu-down" style="color: black;"></span>
+        </a>
       </section>
 
-      <section class="page-start">
+      <section id="page-start">
         <div class="box">
           <h3>GREETING</h3>
           <h1>HANDMADE DESSERT SHOP</h1>
@@ -63,7 +67,7 @@
                 <p>DE BON</p>
                 <h1 style="margin-top: -5px">
                   DESSERT<br />
-                  CAFE
+                  TARTE
                 </h1>
                 <hr class="vertical_hr" />
               </div>
@@ -85,7 +89,7 @@
                 <p>DE BON</p>
                 <h1 style="margin-top: -5px">
                   DESSERT<br />
-                  CAFE
+                  CAKE
                 </h1>
                 <hr class="vertical_hr" />
               </div>
