--- a/static/css/mainPage.css
+++ b/static/css/mainPage.css
@@ -1,5 +1,7 @@
 @import url(//fonts.googleapis.com/earlyaccess/kopubbatang.css);
-
+html {
+  scroll-behavior: smooth;
+}
 .kopubbatang * {
   font-family: "KoPub Batang", serif;
 }
@@ -33,7 +35,7 @@ header{
 }
 .img_wrap{
   width: 100%;
-  height: 1000px;
+  height: 800px;
 }
 .cycle-slideshow{
   z-index: 0;
@@ -41,6 +43,16 @@ header{
 .cycle-slideshow img{
   width: 100%;
   opacity: 0.5;
+  height: 800px;
+}
+.scroll_down{
+  position: relative;
+  top: -200px;
+}
+#scroll{
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
 }
 body {
   margin: 0;
