공지사항 footer 제외 완

--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -155,8 +155,7 @@
           드본은 마켓플레이스(오픈마켓) 상품, 거래정보 및 거래 등에 대하여 책임을 지지 않습니다.
           
           Copyright © 드본 All rights reserved.
-          </pre
-      >
+          </pre>
     </footer>
     <script src="../static/js/header.js"></script>
     <script src="../static/js/mainPage.js"></script>
