--- a/templates/news.html
+++ b/templates/news.html
@@ -49,10 +49,10 @@
                 <tr>
                     <th>번호</th><th>제목</th> <th>작성자</th><th>등록일</th><th>조회수</th>
                 </tr>
-                <tr class="data" onclick='count(0)'>
+                <tr class="data" onclick='count(0)' onmouseover="mOver(this)" onmouseout="mOut(this)">
                     <td>2</td><td><a href="#contentNews">주문 오류 관련 사항 안내</a></td><td>관리자</td><td>2022.05.29</td><td class="result">10</td>
                 </tr>
-                <tr class="data" onclick='count(1)'>
+                <tr class="data" onclick='count(1)' onmouseover="mOver(this)" onmouseout="mOut(this)">
                     <td>1</td><td><a href="#contentNews">공지사항 게시판이 오픈하였습니다.</a></td><td>관리자</td><td>2022.05.29</td><td class="result">10</td>
                 </tr>
             </table>
