--- a/static/css/news.css
+++ b/static/css/news.css
@@ -15,6 +15,7 @@ h2 { font-size: 50px;  font-weight: bolder; }
     background-color:rgba(0, 0, 0, 0.5); /*살짝 투명한 검정으로 배경색*/
     width:100%;  height:500px;
     position: absolute; /*다른 요소들 위로 겹쳐질 수 있게함*/
+    animation: fadeInDown 1s;
 }
 
 .img_wrap { width: 100%;}
