--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -5,6 +5,7 @@
     <title>Dessert</title>
     <link rel="stylesheet" href="../static/css/mainPage.css" />
     <link rel="stylesheet" href="../static/css/header.css" />
+    <link rel="stylesheet" href="../static/css/footer.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
@@ -151,30 +152,14 @@
       </section>
     </div>
 
-    <footer>
-      <a href="mainPage.html" class="logo">DE BON</a>
-      <ul>
-        <li><a href="#">드본소개</a></li>
-        <li class="splitBar">|</li>
-        <li><a href="#">이용약관</a></li>
-        <li class="splitBar">|</li>
-        <li><a href="#">개인정보 처리방침</a></li>
-      </ul>
-      <pre>
-          드본 | 대표자 : 충북대 | 본사 : 서울특별시 성동구 뚝섬로1길 63, 영창디지털타워 11층 | 대표전화 : 1522 - 9774 | 팩스 : 02 - 540 - 2237
-          사업자번호 : 261 - 81 - 15766 | 드본 브레드 사업자번호 : 680 - 87 - 00452
-          사이버몰 내 판매되는 상품 중에는 드본에 등록한 개별 판매자가 판매하는 마켓플레이스(오픈마켓) 상품이 포함되어 있습니다.
-          마켓플레이스(오픈마켓) 상품의 경우 드본은 통신판매중개자이며 통신판매의 당사자가 아닙니다.
-          드본은 마켓플레이스(오픈마켓) 상품, 거래정보 및 거래 등에 대하여 책임을 지지 않습니다.
+    <footer></footer>
 
-          Copyright © 드본 All rights reserved.
-          </pre>
-    </footer>
     <script src="../static/js/header.js"></script>
     <script src="../static/js/mainPage.js"></script>
+    <script src="../static/js/footer.js"></script>
     <script
       class="script_api"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjgzOCwqS88xhlO2-TjIyeeBdvbxroh70&callback=myMap"
+      src="https://maps.googleapis.com/maps/api/js?key={YOUR_KEY}&callback=myMap"
     ></script>
   </body>
 </html>
