--- a/templates/news.html
+++ b/templates/news.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Dessert</title>
-    <link rel="stylesheet" href="../static/css/header.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+   
     <link rel="stylesheet" href="../static/css/news.css"/>
     <script src="../static/js/news.js"></script>
+    <link rel="stylesheet" href="../static/css/header.css"/>
     <script src="../static/js/header.js"></script>
+    <link rel="stylesheet" href="../static/css/footer.css"/>
+    <script src="../static/js/footer.js"></script>
 </head>
 <body>
-
     <header class="header"></header>
     <div class="bg"></div>
     <div class="title">
@@ -32,7 +34,7 @@
             <li class="on"><a href="#">공지사항</a></li>
         </div>
     </div>
-    <section class="page-start">
+    <section id="page-start">
         <div class="notice">
             <ul class="rolling">
                 <li><a href="#">공지사항 게시판이 오픈하였습니다.</a></li>
@@ -57,6 +59,7 @@
                 </tr>
             </table>
         </div>
+        <footer></footer>
     </section>
 </body>
 </html>
