메뉴 페이지 연결

--- a/templates/header.html
+++ b/templates/header.html
@@ -7,16 +7,16 @@
         <nav class="navbar">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#">DE BON</a>
+                    <a class="navbar-brand" href="mainPage.html">DE BON</a>
                 </div>
                 <div>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#">BRAND</a></li>
-                        <li><a href="#">MENU</a></li>
+                        <li><a href="menu.html">MENU</a></li>
                         <li><a href="#">FRANCHISE</a></li>
                         <li><a href="#">ORDER</a></li>
-                        <li><a href="#">NEWS</a></li>
-                        <li><a href="#">LOGIN</a></li>
+                        <li><a href="news.html">NEWS</a></li>
+                        <li><a href="DessertLogin.html">LOGIN</a></li>
                     </ul>
                 </div>
             </div>
