--- a/templates/DessertLogin.html
+++ b/templates/DessertLogin.html
@@ -36,9 +36,12 @@
             아직 회원이 아니신가요? <br />
             고객님을 위한 다양한 혜택이 준비되어 있습니다
           </p>
-          <button type="submit">회원가입</button>
+          <button type="button" onclick="location.href='DessertSignup.html' ">
+            회원가입
+          </button>
         </div>
       </form>
     </div>
+    <script src="../static/js/login.js"></script>
   </body>
 </html>
