menu 페이지 구현

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -20,16 +20,284 @@
 </head>
 <body>
     <header></header>
-    <div class="wrap">
-        <div class="img_wrap">
-            <img class="scale" src="../static/src/img5.jpg" alt="배경사진"/>
+
+    <div class="body">
+        <div class="wrap">
+            <div class="title">
+                <h1>DESSERT MENU</h1>
+                <p>찾으시는 메뉴를 클릭해서 확인해보세요.</p>
+            </div>
+            <div class="img_wrap">
+                <img class="scale" src="../static/src/menu_img.jpg" alt="배경사진"/>
+            </div>
         </div>
-        <h1>DESSERT MENU</h1>
-        <p>찾으시는 메뉴를 클릭해서 확인해보세요.</p>
+
+        <section id="page-start">
+            <div class="wrap2">
+                <div class="first_wrap" style="margin-left: 580px">
+                    <a class="first_wrap" href="#wrap3" onmouseover="">
+                        <img src="../static/src/icon_cake.png" alt="케이크 아이콘">
+                        <p style="margin-top: 11px">CAKE</p>
+                    </a>
+                </div>
+                <div class="second_wrap" style="margin-left: 50px">
+                    <a class="second_wrap" href="#wrap4">
+                        <img src="../static/src/icon_tart.png" alt="타르트 아이콘">
+                        <p>TART</p>
+                    </a>
+                </div>
+            </div>
+
+            <div id="wrap3">
+                <div class="cake">
+                    <img src="../static/src/cake.jpg" alt="케이크 배너">
+                    <div class="box">
+                        <h1>CAKE</h1>
+                        <p>디저트의 본 고장에서 전수받은 기술력과, <br>
+                            일류호텔 출신 셰프들의 오랜 연구와 노하우로 <br>
+                            만드는 수제 케이크입니다.</p>
+                    </div>
+                </div>
+            </div>
+
+            <table>
+                <tr>
+                    <td>
+                        <div class="table_box"
+                             onmouseenter="zoomIn(event)"
+                             onmouseleave="zoomOut(event)">
+                            <img src="../static/src/cake_img1.png" alt="당근" class="table_img">
+                            <label>당근 케이크</label><br><br>
+                            <label>5 $</label>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="table_box"
+                             onmouseenter="zoomIn(event)"
+                             onmouseleave="zoomOut(event)">
+                            <img src="../static/src/cake_img2.png" alt="자색 고구마" class="table_img">
+                            <label>자색 고구마 케이크</label><br><br>
+                            <label>6 $</label>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="table_box"
+                             onmouseenter="zoomIn(event)"
+                             onmouseleave="zoomOut(event)">
+                            <img src="../static/src/cake_img3.png" alt="흑임자" class="table_img">
+                            <label>흑임자 케이크</label><br><br>
+                            <label>4 $</label>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="table_box"
+                             onmouseenter="zoomIn(event)"
+                             onmouseleave="zoomOut(event)">
+                            <img src="../static/src/cake_img4.png" alt="블루베리" class="table_img">
+                            <label>블루베리 치즈 케이크</label><br><br>
+                            <label>10 $</label>
+                        </div>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        <div class="table_box"
+                             onmouseenter="zoomIn(event)"
+                             onmouseleave="zoomOut(event)">
+                            <img src="../static/src/cake_img5.png" alt="솔티카라멜" class="table_img">
+                            <label>솔티카라멜 케이크</label><br><br>
+                            <label>5 $</label>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="table_box"
+                             onmouseenter="zoomIn(event)"
+                             onmouseleave="zoomOut(event)">
+                            <img src="../static/src/cake_img6.png" alt="블루베리요거트" class="table_img">
+                            <label>블루베리요거트 케이크</label><br><br>
+                            <label>6 $</label>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="table_box"
+                             onmouseenter="zoomIn(event)"
+                             onmouseleave="zoomOut(event)">
+                            <img src="../static/src/cake_img7.png" alt="말차시로이" class="table_img">
+                            <label>말차시로이 케이크</label><br><br>
+                            <label>4 $</label>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="table_box"
+                             onmouseenter="zoomIn(event)"
+                             onmouseleave="zoomOut(event)">
+                            <img src="../static/src/cake_img8.png" alt="시로이" class="table_img">
+                            <label>시로이 케이크</label><br><br>
+                            <label>10 $</label>
+                        </div>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        <div class="table_box"
+                             onmouseenter="zoomIn(event)"
+                             onmouseleave="zoomOut(event)">
+                            <img src="../static/src/cake_img9.png" alt="밀푀유스폰지" class="table_img">
+                            <label>밀푀유스폰지 케이크</label><br><br>
+                            <label>5 $</label>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="table_box"
+                             onmouseenter="zoomIn(event)"
+                             onmouseleave="zoomOut(event)">
+                            <img src="../static/src/cake_img10.png" alt="비건디" class="table_img">
+                            <label>비건디 케이크</label><br><br>
+                            <label>6 $</label>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="table_box"
+                             onmouseenter="zoomIn(event)"
+                             onmouseleave="zoomOut(event)">
+                            <img src="../static/src/cake_img11.png" alt="아키" class="table_img">
+                            <label>아키 케이크</label><br><br>
+                            <label>4 $</label>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="table_box"
+                             onmouseenter="zoomIn(event)"
+                             onmouseleave="zoomOut(event)">
+                            <img src="../static/src/cake_img12.png" alt="오디" class="table_img">
+                            <label>오디 케이크</label><br><br>
+                            <label>10 $</label>
+                        </div>
+                    </td>
+                </tr>
+            </table>
+
+            <div id="wrap4">
+                <div class="tart">
+                    <img src="../static/src/tart.jpg" alt="케이크 배너">
+                    <div class="box2">
+                        <h1>TART</h1>
+                        <p>드본만의 노하우로 방부제, 화학첨가물 없이 매일매일 <br>
+                            엄선한 재료로 만들고 있습니다. <br>
+                            일반적인 공법 대신 드본만의 레시피와 <br>
+                            천연 유산균 생지를 사용하여 더욱 부드럽고 건강한 <br>
+                            타르트를 생산하고 있습니다.</p>
+                    </div>
+                </div>
+            </div>
+            <table>
+                <tr>
+                    <td>
+                        <figure class="snip1200">
+                            <img src="../static/src/tart_img1.jpg" alt="sq-sample27" />
+                            <figcaption>
+                                <p>I say, if your knees aren't green by the end of the day, you ought to seriously re-examine your life.</p>
+                                <div class="heading">
+                                    <h2>사과<span> 타르트</span></h2>
+                                </div>
+                            </figcaption>
+                            <a href="#"></a>
+                        </figure>
+                    </td>
+                    <td>
+                        <figure class="snip1200">
+                            <img src="../static/src/tart_img2.jpg" alt="sq-sample27" />
+                            <figcaption>
+                                <p>I say, if your knees aren't green by the end of the day, you ought to seriously re-examine your life.</p>
+                                <div class="heading">
+                                    <h2>딸기<span>타르트</span></h2>
+                                </div>
+                            </figcaption>
+                            <a href="#"></a>
+                        </figure>
+                    </td>
+                    <td>
+                        <figure class="snip1200">
+                            <img src="../static/src/tart_img3.jpg" alt="sq-sample27" />
+                            <figcaption>
+                                <p>I say, if your knees aren't green by the end of the day, you ought to seriously re-examine your life.</p>
+                                <div class="heading">
+                                    <h2>호두 피칸<span>타르트</span></h2>
+                                </div>
+                            </figcaption>
+                            <a href="#"></a>
+                        </figure>
+                    </td>
+                    <td>
+                        <figure class="snip1200">
+                            <img src="../static/src/tart_img4.jpg" alt="sq-sample27" />
+                            <figcaption>
+                                <p>I say, if your knees aren't green by the end of the day, you ought to seriously re-examine your life.</p>
+                                <div class="heading">
+                                    <h2>에그<span>타르트</span></h2>
+                                </div>
+                            </figcaption>
+                            <a href="#"></a>
+                        </figure>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        <figure class="snip1200">
+                            <img src="../static/src/tart_img5.jpg" alt="sq-sample27" />
+                            <figcaption>
+                                <p>I say, if your knees aren't green by the end of the day, you ought to seriously re-examine your life.</p>
+                                <div class="heading">
+                                    <h2>바노피<span>타르트</span></h2>
+                                </div>
+                            </figcaption>
+                            <a href="#"></a>
+                        </figure>
+                    </td>
+                    <td>
+                        <figure class="snip1200">
+                            <img src="../static/src/tart_img6.jpg" alt="sq-sample27" />
+                            <figcaption>
+                                <p>I say, if your knees aren't green by the end of the day, you ought to seriously re-examine your life.</p>
+                                <div class="heading">
+                                    <h2>블루베리<span>타르트</span></h2>
+                                </div>
+                            </figcaption>
+                            <a href="#"></a>
+                        </figure>
+                    </td>
+                    <td>
+                        <figure class="snip1200">
+                            <img src="../static/src/tart_img7.jpg" alt="sq-sample27" />
+                            <figcaption>
+                                <p>I say, if your knees aren't green by the end of the day, you ought to seriously re-examine your life.</p>
+                                <div class="heading">
+                                    <h2>초콜릿<span>타르트</span></h2>
+                                </div>
+                            </figcaption>
+                            <a href="#"></a>
+                        </figure>
+                    </td>
+                    <td>
+                        <figure class="snip1200">
+                            <img src="../static/src/tart_img8.jpg" alt="sq-sample27" />
+                            <figcaption>
+                                <p>I say, if your knees aren't green by the end of the day, you ought to seriously re-examine your life.</p>
+                                <div class="heading">
+                                    <h2>청포도<span>타르트</span></h2>
+                                </div>
+                            </figcaption>
+                            <a href="#"></a>
+                        </figure>
+                    </td>
+                </tr>
+            </table>
+        </section>
     </div>
 
-    <section id="page-start">
-    </section>
     <footer></footer>
 
     <script src="../static/js/header.js"></script>
