--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -57,7 +57,7 @@ span {
 }
 textarea {
     margin: 10px;
-    width: 300px;
+    width: 400px;
     height: 50px;
 }
 
@@ -65,17 +65,7 @@ button {
     margin: 10px 30px auto 30px;
 }
 
-.fruits {
-    position: relative;
-}
-
-.container {
+.fruit {
+    display: block;
     position: absolute;
-    width: 800px;
-    height: 400px;
-}
-
-.container img {
-    position: absolute;
-    width: 70px;
 }
