--- a/templates/DessertLogin.html
+++ b/templates/DessertLogin.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>로그인창</title>
     <link rel="stylesheet" href="../static/css/DessertLogin.css" />
+    <link rel="stylesheet" href="../static/css/footer.css" />
   </head>
   <body>
     <div class="loginbox">
@@ -17,11 +18,15 @@
             id="loginid"
             placeholder="아이디 (E-mail)을 입력해 주세요"
             autofocus
+            required
+            maxlength="15"
           />
           <input
             type="password"
             id="loginpw"
             placeholder="비밀번호를 입력해 주세요"
+            required
+            maxlength="20"
           />
         </div>
 
@@ -29,19 +34,27 @@
           <li><a href="#">아이디찾기</a></li>
           <li><a href="#">비밀번호찾기</a></li>
         </ul>
-        <button id="LoginClick" type="submit">로그인</button>
+        <button id="LoginClick" type="submit" onclick="loginchecking();">
+          로그인
+        </button>
 
         <div id="SignUp">
           <p>
             아직 회원이 아니신가요? <br />
             고객님을 위한 다양한 혜택이 준비되어 있습니다
           </p>
-          <button type="button" onclick="location.href='DessertSignup.html' ">
+          <button
+            class="btn-signup"
+            type="button"
+            onclick="location.href='DessertSignup.html' "
+          >
             회원가입
           </button>
         </div>
       </form>
     </div>
+    <footer></footer>
     <script src="../static/js/login.js"></script>
+    <script src="../static/js/footer.js"></script>
   </body>
 </html>
