--- a/templates/header.html
+++ b/templates/header.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-</head>
-<body>
+  <head> </head>
+  <body>
     <div class="inner">
-        <nav class="navbar">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="#">DE BON</a>
-                </div>
-                <div>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">BRAND</a></li>
-                        <li><a href="#">MENU</a></li>
-                        <li><a href="#">FRANCHISE</a></li>
-                        <li><a href="#">ORDER</a></li>
-                        <li><a href="#">NEWS</a></li>
-                        <li><a href="#">LOGIN</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+      <nav class="navbar">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#">DE BON</a>
+          </div>
+          <div>
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#">BRAND</a></li>
+              <li><a href="#">MENU</a></li>
+              <li><a href="#">FRANCHISE</a></li>
+              <li><a href="#">ORDER</a></li>
+              <li><a href="#">NEWS</a></li>
+              <li><a href="DessertLogin.html">LOGIN</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </div>
-</body>
+  </body>
 </html>
